--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,21 @@ header {
     margin: 10px
 }
 
+/* footer */
+footer {
+    header {
+        border: 1px solid black;
+        background-color: rgb(230, 222, 238);
+        display: flex;
+        text-align: center  ;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        gap: 20 px;
+        margin: 10px
+    }
+}
+
 div{
     background-color: rgb(171, 158, 184);
     width: 150%;
@@ -43,6 +58,8 @@ div{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    font-weight: bold;
+    line-height: 2;
 }
 
 nav ul li {
@@ -50,6 +67,8 @@ nav ul li {
     display: inline-block;
     margin: 0 10 px;
     letter-spacing: 2px;
+    font-weight: bold;
+    line-height: 2;
 }
 
 a{
@@ -66,8 +85,6 @@ main {
 }
 
 
-
-
 h1{color:rgb(93, 20, 161);
 font-family: sans-serif;
 font-weight: bold;
@@ -78,18 +95,16 @@ text-decoration: underline;
 
 h2{color:rgb(161, 20, 93);}
 
-p{
-    color: black;
-    font-size: 16px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h3{
+color:rgb(57, 6, 32);
+font-style: oblique;
 }
 
-/* footer */
-footer {
-    margin: 20 px;
-    padding: 20 px;
-    border-top: 1px solid black ;
-    text-align: center;
+p{
+    color: black;
+    font-size: 15px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 2;
 }
 
 /* imagen vela */
@@ -99,6 +114,13 @@ footer {
     align-items: center;
     margin: 10px;
     padding: 10px;
+}
+
+.vela3 {
+    margin: 20px;
+    border: 4px solid black;
+    border-radius: 10 px;
+    align-items: center;
 }
 
 /* imagen difusor */
@@ -145,24 +167,53 @@ footer {
     align-items: center;
 }
 
-form {
-    margin-top: 20px;
+
+.form_input {
+    padding: 6px 20px;
 }
+
+input, textarea {
+    width: 80%;
+    padding: 6px 8px;
+    border: 2px solid #ccc;
+    font-size: 15px;
+    margin-bottom: 15px;
+    line-height: 2;
+    box-sizing: border-box;
+}
+
+textarea {
+min-width: 100%;
+resize: none;
+min-height: 102px;
+}
+
 
 label{
     display:block;
     font-weight: bold;
     margin-bottom: 5px;
     color: dimgray;
+    line-height: 2;
 }
+
+
 
 input, textarea {
     display: block;
-    width: 40%;
+    width: 50%;
     padding: 10px;
     border: 2px solid #ccc;
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 15px;
+    line-height: 2;
+    box-sizing: border-box;
+}
+
+.contacto_enviar{
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    width: 50%;
 }
 
 /* responsive: */
@@ -184,6 +235,7 @@ font-size: 2.5rem;
         margin: 5vh;
         font-size: 2rem;
         flex-direction: column;
+        line-height: 2;
     }
 
     /* Index */
